--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -1198,9 +1198,12 @@
     <string name="formatterDay24H">HH:mm</string>
     <string name="formatterDay12H">h:mm a</string>
     <string name="formatDateAtTime">%1$s at %2$s</string>
+
+
     <string name="techrunch_select_city">Select city</string>
     <string name="techrunch_your_city">Your city</string>
     <string name="techrunch_no_city">---</string>
     <string name="techrunch_closest_to_me">Closest to me</string>
     <string name="techrunch_church_selection">Church selection</string>
+    <string name="techranch_cities">Cities</string>
 </resources>
